--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </button>
             </div>
             <div id="right">
-                <div id="selector"></div>
+                <div id="surface"></div>
             </div>
         </div>
         <div id="not-supported">
