--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
     <body>
         <div id="wrap">
             <div id="left">
-                <div class="checkbox">
-                    <input type="checkbox" id="show-marker-checkbox" />
-                    <div class="checkbox-label">Show Markers?</div>
-                </div>
-                <button class="button" id="train-btn" style="margin-top: 25px;">
+                <button class="button" id="train-btn">
                     Train AI
                 </button>
             </div>
