--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 </button>
             </div>
             <div id="right">
-                <div id="surface"></div>
+                <button class="button" id="run-btn">Run</button>
             </div>
         </div>
         <div id="not-supported">
