--- a/index.html
+++ b/index.html
@@ -5,25 +5,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="https://use.typekit.net/xrb2zeu.css" />
         <link rel="stylesheet" href="./index.css" />
-        <title>Simple Separator</title>
+        <title>NAND Gates</title>
     </head>
     <body>
         <div id="wrap">
-            <div id="left">
-                <button class="button" id="train-btn">
-                    Train AI
-                </button>
-            </div>
-            <div id="right">
-                <button class="button" id="run-btn">Run</button>
-            </div>
-        </div>
-        <div id="not-supported">
-            <div class="subtitle">
-                Sorry dude, I haven't made this look great on small screens yet.
-                Check it out on your computer though, it's really cool.
-            </div>
+            <button class="button is-green is-big" id="train-btn">
+                Train AI
+            </button>
+            <div id="model"></div>
         </div>
     </body>
-    <script src="./main.js"></script>
+    <script src="./index.js"></script>
 </html>
